--- a/package.json
+++ b/package.json
@@ -3,15 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/free-regular-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@heroicons/react": "^1.0.6",
-    "daisyui": "^2.24.0",
+    "axios": "^1.6.2",
+    "daisyui": "^2.52.0",
+    "dotenv": "^16.3.1",
+    "openai": "^4.19.0",
     "react": "^18.2.0",
     "react-daisyui": "^2.2.0",
     "react-dom": "^18.2.0",
     "react-fetch-hook": "^1.9.5",
     "react-masonry-css": "^1.0.16",
-    "react-router-dom": "^6.3.0",
+    "react-router-dom": "^6.19.0",
     "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.5",
     "theme-change": "^2.2.0"
   },
   "scripts": {
@@ -40,8 +49,8 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.4",
-    "autoprefixer": "^10.4.8",
-    "postcss": "^8.4.16",
-    "tailwindcss": "^3.1.8"
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5"
   }
 }
