--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.6.2",
     "daisyui": "^2.52.0",
     "dotenv": "^16.3.1",
+    "framer-motion": "^10.16.5",
     "openai": "^4.19.0",
     "react": "^18.2.0",
     "react-daisyui": "^2.2.0",
